--- a/ysl-gapps.json
+++ b/ysl-gapps.json
@@ -1,13 +1,13 @@
 {
 "response": [
 {
- "datetime": "1641877341",
- "filename": "CipherOS-2.1-SHADE-cipher_ysl-20220112-0337-OFFICIAL-GAPPS.zip",
- "id": "06bd637481fad1f190bfaa546477093b",
+ "datetime": "1644718348",
+ "filename": "CipherOS-2.5-LYNX-cipher_ysl-20220213-0624-OFFICIAL-GAPPS.zip",
+ "id": "b2e57743f049544fc138988f43d543ee",
  "romtype":"STABLE",
- "size": 1080239844,
- "url": "https://sourceforge.net/projects/cipheros/files/SHADE/ysl/CipherOS-2.1-SHADE-cipher_ysl-20220112-0337-OFFICIAL-GAPPS.zip/download",
- "version": "2.1-SHADE"
+ "size": 1079484232,
+ "url": "https://master.dl.sourceforge.net/project/CipherOS/Cipher-2.x/LYNX/ysl/CipherOS-2.5-LYNX-cipher_ysl-20220213-0624-OFFICIAL-GAPPS.zip/download",
+ "version": "2.5-LYNX"
 }
 ]
 }
