OTA: Sync Beryllium OTA [17/02/'22]

--- a/beryllium-gapps.json
+++ b/beryllium-gapps.json
@@ -1,13 +1,13 @@
 {
 "response": [
 {
- "datetime": "1641878598",
- "filename": "CipherOS-2.1-SHADE-cipher_beryllium-20220111-0523-OFFICIAL-GAPPS.zip",
- "id": "e620e5c57ad2df8d981a0602988bdfaa",
+ "datetime": "1644983563",
+ "filename": "CipherOS-2.5-LYNX-cipher_beryllium-20220216-0352-OFFICIAL-GAPPS.zip",
+ "id": "1d39f3abe450653104ced60ff53404d6",
  "romtype":"STABLE",
- "size": 1240335319,
- "url": "https://sourceforge.net/projects/cipheros/files/SHADE/beryllium/CipherOS-2.1-SHADE-cipher_beryllium-20220111-0523-OFFICIAL-GAPPS.zip/download",
- "version": "2.1-SHADE"
+ "size": 1240468332,
+ "url": "https://sourceforge.net/projects/cipheros/files/Cipher-2.x/LYNX/beryllium/CipherOS-2.5-LYNX-cipher_beryllium-20220216-0352-OFFICIAL-GAPPS.zip/download",
+ "version": "2.5-LYNX"
 }
 ]
 }
