--- a/tucana-gapps.json
+++ b/tucana-gapps.json
@@ -2,12 +2,12 @@
 "response": [
 {
  "datetime": "1641994506",
- "filename": "CipherOS-2.1-SHADE-cipher_tucana-20220112-1435-OFFICIAL-GAPPS.zip",
- "id": "38ce37a6958a9318dbcde4d25392eec4",
+ "filename": "CipherOS-2.5-LYNX-cipher_tucana-20220219-1304-OFFICIAL-GAPPS.zip",
+ "id": "a1708085be15aac28b4d49b7a90a6f39",
  "romtype":"STABLE",
- "size": 1514991887,
- "url": "https://sourceforge.net/projects/cipheros/files/SHADE/tucana/CipherOS-2.1-SHADE-cipher_tucana-20220112-1435-OFFICIAL-GAPPS.zip/download",
- "version": "2.1-SHADE"
+ "size": 1515057044,
+ "url": "https://sourceforge.net/projects/cipheros/files/Cipher-2.x/LYNX/tucana/CipherOS-2.5-LYNX-cipher_tucana-20220219-1304-OFFICIAL-GAPPS.zip/download",
+ "version": "2.5-LYNX"
 }
 ]
 }
