--- a/ysl-gapps.json
+++ b/ysl-gapps.json
@@ -1,13 +1,13 @@
 {
 "response": [
 {
- "datetime": "1644718348",
- "filename": "CipherOS-2.5-LYNX-cipher_ysl-20220213-0624-OFFICIAL-GAPPS.zip",
- "id": "b2e57743f049544fc138988f43d543ee",
+ "datetime": "1647309708",
+ "filename": "CipherOS-3.0-GRAVITY-cipher_ysl-20220315-1411-OFFICIAL-GAPPS.zip",
+ "id": "d2fac3c9b23a5c562b2fb100804eaed8",
  "romtype":"STABLE",
- "size": 1079484232,
- "url": "https://master.dl.sourceforge.net/project/CipherOS/Cipher-2.x/LYNX/ysl/CipherOS-2.5-LYNX-cipher_ysl-20220213-0624-OFFICIAL-GAPPS.zip/download",
- "version": "2.5-LYNX"
+ "size": "1139288991",
+ "url": "https://master.dl.sourceforge.net/project/CipherOS/Cipher-3.x/GRAVITY/ysl/CipherOS-3.0-GRAVITY-cipher_ysl-20220315-1411-OFFICIAL-GAPPS.zip",
+ "version": "3.0-GRAVITY"
 }
 ]
 }
