--- a/RMX1941-gapps.json
+++ b/RMX1941-gapps.json
@@ -1,13 +1,13 @@
 {
 "response": [
 {
-"datetime": "1644666669",
-"filename": "CipherOS-2.5-LYNX-cipher_RMX1941-20220212-1151-OFFICIAL-GAPPS.zip",
-"id": "92986b8c978ccfa792072d78b0edefe9",
+"datetime": "1647488987",
+"filename": "CipherOS-3.0-GRAVITY-cipher_RMX1941-20220317-0349-OFFICIAL-GAPPS.zip",
+"id": "cfb3c4d343daa8992ae0bd67df4fdd3d",
 "romtype":"STABLE",
-"size": 1211170673,
-"url": "https://master.dl.sourceforge.net/project/CipherOS/Cipher-2.x/LYNX/RMX1941/CipherOS-2.5-LYNX-cipher_RMX1941-20220212-1151-OFFICIAL-GAPPS.zip",
-"version": "2.5-LYNX"
+"size": 1281913721,
+"url": "https://master.dl.sourceforge.net/project/cipheros/Cipher-3.x/GRAVITY/RMX1941/CipherOS-3.0-GRAVITY-cipher_RMX1941-20220317-0349-OFFICIAL-GAPPS.zip",
+"version": "3.0-GRAVITY"
 }
 ]
 }
