OTA: Sync OTA for Beryllium [19/03/2022]

--- a/beryllium-gapps.json
+++ b/beryllium-gapps.json
@@ -1,13 +1,13 @@
 {
 "response": [
 {
- "datetime": "1644983563",
- "filename": "CipherOS-2.5-LYNX-cipher_beryllium-20220216-0352-OFFICIAL-GAPPS.zip",
- "id": "1d39f3abe450653104ced60ff53404d6",
+ "datetime": "1647350910",
+ "filename": "CipherOS-3.0-GRAVITY-cipher_beryllium-20220315-1330-OFFICIAL-GAPPS.zip",
+ "id": "19619f81d50c3386598937da767cf123",
  "romtype":"STABLE",
- "size": 1240468332,
- "url": "https://sourceforge.net/projects/cipheros/files/Cipher-2.x/LYNX/beryllium/CipherOS-2.5-LYNX-cipher_beryllium-20220216-0352-OFFICIAL-GAPPS.zip/download",
- "version": "2.5-LYNX"
+ "size": 1306485174,
+ "url": "https://sourceforge.net/projects/cipheros/files/Cipher-3.x/GRAVITY/beryllium/CipherOS-3.0-GRAVITY-cipher_beryllium-20220315-1330-OFFICIAL-GAPPS.zip/download",
+ "version": "3.0-GRAVITY"
 }
 ]
 }
