--- a/RMX2020-gapps.json
+++ b/RMX2020-gapps.json
@@ -1,13 +1,13 @@
 {
     "response": [
     {
-     "datetime": "1647442199",
-     "filename": "CipherOS-3.0-GRAVITY-cipher_RMX2020-20220318-0539-OFFICIAL-GAPPS.zip",
-     "id": "744fc5213ec27ecadc1240519bc3f25a",
-     "romtype":"STABLE",
-     "size": "1331169454",
-     "url": "https://master.dl.sourceforge.net/project/cipheros/Cipher-3.x/GRAVITY/RMX2020/CipherOS-3.0-GRAVITY-cipher_RMX2020-20220318-0539-OFFICIAL-GAPPS.zip",
-     "version": "3.0-GRAVITY"
+     "datetime": "1649906094",
+     "filename": "CipherOS-3.2-EXODUS-cipher_RMX2020-20220414-0320-OFFICIAL-GAPPS.zip",
+     "id": "686d87a7a1f9f6988fdae513fc61822e",
+     "romtype": "STABLE",
+     "size": "1564934982",
+     "url": "https://master.dl.sourceforge.net/project/cipheros/Cipher-3.x/EXODUS/RMX2020/CipherOS-3.2-EXODUS-cipher_RMX2020-20220414-0320-OFFICIAL-GAPPS.zip",
+     "version": "3.2-EXODUS"
     }
     ]
 }
