--- a/tucana-gapps.json
+++ b/tucana-gapps.json
@@ -1,13 +1,13 @@
 {
 "response": [
 {
- "datetime": "1647289924",
- "filename": "CipherOS-3.0-GRAVITY-cipher_tucana-20220314-2132-OFFICIAL-GAPPS.zip",
- "id": "b861d89a88e9b88494d80ce6ec52adfb",
- "romtype":"STABLE",
- "size": 1575973061,
- "url": "https://sourceforge.net/projects/cipheros/files/Cipher-3.x/GRAVITY/tucana/CipherOS-3.0-GRAVITY-cipher_tucana-20220314-2132-OFFICIAL-GAPPS.zip/download",
- "version": "3.0-GRAVITY"
+ "datetime": "1649864914",
+ "filename": "CipherOS-3.2-EXODUS-cipher_tucana-20220413-1749-OFFICIAL-GAPPS.zip",
+ "id": "04ae0a29e5fec7149cef8e2d5cea15e3",
+ "romtype": "STABLE",
+ "size": "1795390064",
+ "url": "https://master.dl.sourceforge.net/project/cipheros/Cipher-3.x/EXODUS/tucana/CipherOS-3.2-EXODUS-cipher_tucana-20220413-1749-OFFICIAL-GAPPS.zip",
+ "version": "3.2-EXODUS"
 }
 ]
 }
