OTA: OTA Sync 15/05/2022 [ysl]

--- a/ysl-gapps.json
+++ b/ysl-gapps.json
@@ -1,13 +1,13 @@
 {
 "response": [
 {
- "datetime": "1649782165",
- "filename": "CipherOS-3.2-EXODUS-cipher_ysl-20220413-0126-OFFICIAL-GAPPS.zip",
- "id": "dcdabb3f6242e54835e1f5dc6db3de7c",
+ "datetime": "1652544939",
+ "filename": "CipherOS-3.4-COMET-cipher_ysl-20220514-1621-OFFICIAL-GAPPS.zip",
+ "id": "2cd527dd2c0d57cde665404b9807c7d6",
  "romtype":"STABLE",
- "size": "1354878678",
- "url": "https://master.dl.sourceforge.net/project/cipheros/Cipher-3.x/EXODUS/ysl/CipherOS-3.2-EXODUS-cipher_ysl-20220413-0126-OFFICIAL-GAPPS.zip",
- "version": "3.2-EXODUS"
+ "size": "1432041059",
+ "url": "https://master.dl.sourceforge.net/project/cipheros/Cipher-3.x/COMET/ysl/CipherOS-3.4-COMET-cipher_ysl-20220514-1621-OFFICIAL-GAPPS.zip",
+ "version": "3.4-COMET"
 }
 ]
 }
