--- a/ysl-gapps.json
+++ b/ysl-gapps.json
@@ -1,13 +1,13 @@
 {
 "response": [
 {
- "datetime": "1652544939",
- "filename": "CipherOS-3.4-COMET-cipher_ysl-20220514-1621-OFFICIAL-GAPPS.zip",
- "id": "2cd527dd2c0d57cde665404b9807c7d6",
+ "datetime": "1655305623",
+ "filename": "CipherOS-3.6-STRIKE-cipher_ysl-20220616-1211-OFFICIAL-GAPPS.zip",
+ "id": "124ddceecc768dc103dfe7c55767acee",
  "romtype":"STABLE",
- "size": "1432041059",
- "url": "https://master.dl.sourceforge.net/project/cipheros/Cipher-3.x/COMET/ysl/CipherOS-3.4-COMET-cipher_ysl-20220514-1621-OFFICIAL-GAPPS.zip",
- "version": "3.4-COMET"
+ "size": "1421879608",
+ "url": "https://master.dl.sourceforge.net/project/cipheros/Cipher-3.x/STRIKE/ysl/CipherOS-3.6-STRIKE-cipher_ysl-20220616-1211-OFFICIAL-GAPPS.zip",
+ "version": "3.6-STRIKE"
 }
 ]
 }
