OTA: ota sync 22/06/2022 [mido]

--- a/mido-gapps.json
+++ b/mido-gapps.json
@@ -2,12 +2,12 @@
  "response" : [
 {
  "datetime" : "1645078895",
- "filename" : "CipherOS-2.5-LYNX-cipher_mido-20220217-1153-OFFICIAL-GAPPS.zip",
- "id" : "88223db1c8fa378c55980798b76c0875",
+ "filename" : "CipherOS-3.6-STRIKE-cipher_mido-20220618-2117-OFFICIAL-GAPPS.zip",
+ "id" : "ef626a43e4669530fa3c9c268ac9ae73",
  "romtype" : "STABLE",
- "size" : 1015168865,
- "url" : "https://sourceforge.net/projects/cipheros/files/Cipher-2.x/LYNX/mido/CipherOS-2.5-LYNX-cipher_mido-20220217-1153-OFFICIAL-GAPPS.zip/download",
- "version" : "2.5-LYNX"
+ "size" : 1261242240,
+ "url" : "https://sourceforge.net/projects/cipheros/files/Cipher-2.x/LYNX/mido/CipherOS-3.6-STRIKE-cipher_mido-20220618-2117-OFFICIAL-GAPPS.zip/download",
+ "version" : "3.6-STRIKE"
 }
 ]
 }
